--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -120,11 +120,11 @@
    "print_hide": 1
   },
   {
+   "fetch_if_empty": 1,
    "fieldname": "service_unit",
    "fieldtype": "Link",
    "label": "Service Unit",
-   "options": "Healthcare Service Unit",
-   "set_only_once": 1
+   "options": "Healthcare Service Unit"
   },
   {
    "depends_on": "eval:doc.__islocal",
@@ -157,9 +157,7 @@
    "in_standard_filter": 1,
    "label": "Department",
    "options": "Medical Department",
-   "read_only": 1,
-   "search_index": 1,
-   "set_only_once": 1
+   "search_index": 1
   },
   {
    "fieldname": "column_break_17",
@@ -190,6 +188,8 @@
    "fetch_from": "patient.patient_name",
    "fieldname": "patient_name",
    "fieldtype": "Data",
+   "in_global_search": 1,
+   "in_list_view": 1,
    "label": "Patient Name",
    "read_only": 1
   },
@@ -289,7 +289,7 @@
    "report_hide": 1
   }
  ],
- "modified": "2020-04-24 21:16:40.576248",
+ "modified": "2020-04-27 17:24:08.468574",
  "modified_by": "Administrator",
  "module": "Healthcare",
  "name": "Patient Appointment",
