--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -47,7 +47,8 @@
   "section_break_3",
   "notes",
   "referring_practitioner",
-  "reminded"
+  "reminded",
+  "tele_code"
  ],
  "fields": [
   {
@@ -344,9 +345,15 @@
   {
    "fieldname": "column_break_18",
    "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "tele_code",
+   "fieldtype": "Data",
+   "label": "TeleCode",
+   "read_only": 1
   }
  ],
- "modified": "2020-05-04 11:20:12.046486",
+ "modified": "2020-05-11 19:19:24.325973",
  "modified_by": "Administrator",
  "module": "Healthcare",
  "name": "Patient Appointment",
