--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -48,7 +48,9 @@
   "notes",
   "referring_practitioner",
   "reminded",
-  "tele_code"
+  "tele_code",
+  "section_break_42",
+  "purchase_invoice"
  ],
  "fields": [
   {
@@ -350,9 +352,22 @@
    "fieldtype": "Currency",
    "label": "Travel Cost",
    "no_copy": 1
+  },
+  {
+   "collapsible": 1,
+   "fieldname": "section_break_42",
+   "fieldtype": "Section Break"
+  },
+  {
+   "fieldname": "purchase_invoice",
+   "fieldtype": "Link",
+   "label": "Purchase Invoice",
+   "no_copy": 1,
+   "options": "Purchase Invoice",
+   "print_hide": 1
   }
  ],
- "modified": "2020-07-16 11:38:11.305530",
+ "modified": "2020-10-05 15:56:05.434871",
  "modified_by": "Administrator",
  "module": "Healthcare",
  "name": "Patient Appointment",
