--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -1,19 +1,18 @@
 {
  "allow_copy": 1,
  "allow_import": 1,
- "autoname": "OP-.######",
+ "autoname": "naming_series:",
  "beta": 1,
  "creation": "2017-05-04 11:52:40.941507",
  "doctype": "DocType",
  "document_type": "Document",
  "engine": "InnoDB",
  "field_order": [
+  "naming_series",
   "inpatient_record",
   "patient",
   "appointment_type",
   "duration",
-  "price",
-  "travel_cost",
   "column_break_1",
   "status",
   "procedure_template",
@@ -21,6 +20,8 @@
   "procedure_prescription",
   "service_unit",
   "check_availability",
+  "price",
+  "travel_cost",
   "section_break_12",
   "department",
   "practitioner",
@@ -31,6 +32,7 @@
   "section_break_16",
   "patient_name",
   "patient_sex",
+  "contact",
   "column_break_18",
   "address_line",
   "postal_code",
@@ -365,9 +367,27 @@
    "no_copy": 1,
    "options": "Purchase Invoice",
    "print_hide": 1
+  },
+  {
+   "fieldname": "naming_series",
+   "fieldtype": "Select",
+   "hidden": 1,
+   "label": "Naming Series",
+   "options": "OP-.YYYY.-.######",
+   "read_only": 1
+  },
+  {
+   "fieldname": "contact",
+   "fieldtype": "Data",
+   "in_global_search": 1,
+   "in_list_view": 1,
+   "in_preview": 1,
+   "in_standard_filter": 1,
+   "label": "Contact",
+   "read_only": 1
   }
  ],
- "modified": "2020-10-05 15:56:05.434871",
+ "modified": "2020-10-24 21:20:41.822038",
  "modified_by": "Administrator",
  "module": "Healthcare",
  "name": "Patient Appointment",
@@ -409,7 +429,7 @@
  "restrict_to_domain": "Healthcare",
  "search_fields": "patient, practitioner, department, appointment_date, appointment_time",
  "show_name_in_global_search": 1,
- "sort_field": "modified",
+ "sort_field": "appointment_date",
  "sort_order": "DESC",
  "title_field": "patient",
  "track_changes": 1,
