--- a/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
+++ b/erpnext/healthcare/doctype/patient_appointment/patient_appointment.json
@@ -85,8 +85,7 @@
    "in_list_view": 1,
    "label": "Appointment Type",
    "options": "Appointment Type",
-   "reqd": 1,
-   "set_only_once": 1
+   "reqd": 1
   },
   {
    "description": "In Minutes",
@@ -157,8 +156,7 @@
    "options": "Healthcare Practitioner",
    "read_only": 1,
    "reqd": 1,
-   "search_index": 1,
-   "set_only_once": 1
+   "search_index": 1
   },
   {
    "fieldname": "department",
@@ -387,7 +385,7 @@
    "read_only": 1
   }
  ],
- "modified": "2020-10-24 21:20:41.822038",
+ "modified": "2020-11-26 18:40:14.818525",
  "modified_by": "Administrator",
  "module": "Healthcare",
  "name": "Patient Appointment",
@@ -431,7 +429,6 @@
  "show_name_in_global_search": 1,
  "sort_field": "appointment_date",
  "sort_order": "DESC",
- "title_field": "patient",
  "track_changes": 1,
  "track_seen": 1
 }
